# sitaware

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  run.py
.claude/: launch.json
.github/workflows/: weekly-check.yml
api/: prices.js  subscribe.js
data/: aum_history.json  cusip_tickers.json  state.json
docs/: index.html
infra/subscribe-worker/: package.json  wrangler.toml
infra/subscribe-worker/src/: worker.js
scripts/: preview.py
src/: __init__.py  alert.py  compute.py  cusip_map.py  edgar.py  funds.py  plays.py  prices.py  render.py
templates/: dashboard.html.j2
tests/: conftest.py  test_compute.py  test_edgar.py  test_render.py
tests/fixtures/: q3_2025_info_table.xml  q4_2025_info_table.xml
